# huffman-compression-rust

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: rust.yml
src/: compression.rs  freq.rs  huffman.rs  main.rs
