[package]
name = "huffman-compression-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bit-vec = { version = "0.9.1", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
commands = "0.0.5"
rayon = "1.12.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
